# navigo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  netlify.toml
.github/workflows/: ci.yml
demo/: README.md  index.html  package-lock.json  package.json  vite.config.js
demo/public/: grp-120-2026.gpx  grp-40-gela-2026.gpx  grp-40-neouvielle.gpx  grp-50-2026.gpx  grp-60-2026.gpx  grp-80-2026.gpx
demo/src/: main.js  sample-trace.js
npm/: README.md  package.json
src/: analyzer.rs  area.rs  calibration.rs  climbs.rs  data.rs  elevation.rs  error.rs  extrema.rs  gpx.rs  helper.rs  interval.rs  leg.rs  lib.rs  location.rs  minetti.rs  pace_model.rs  section.rs  segment.rs  simplify.rs  stage.rs  time.rs  trace.rs  utils.rs  wasm.rs  waypoint.rs
src/wasm/: dto.rs  js.rs  options.rs  pipeline.rs  trace.rs
tests/: build_trace.rs  integration.rs
tests/fixtures/: grp-160-2026.gpx  route.csv
