[package]
name = "navigo"
version = "0.1.0"
authors = ["Thomas Gilbert <thomas.gilbert@dolby.com>"]
edition = "2021"
description = "Simply manipulate GPS/geospatial data in Rust — distances, elevation, simplification, climb detection."
license = "MIT"
repository = "https://github.com/totorototo/navigo"
readme = "README.md"
keywords = ["gps", "geospatial", "navigation", "elevation", "trace"]
categories = ["science::geo", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

