[package]
name = "navigo"
version = "0.8.0"
authors = ["Thomas <el.totorototo@gmail.com>"]
edition = "2021"
description = "GPS/geospatial data for Rust — trace analysis, GPX parsing, Minetti pace model, race route analysis (legs/sections/stages), live calibration."
license = "MIT"
repository = "https://github.com/totorototo/navigo"
readme = "README.md"
keywords = ["gps", "geospatial", "navigation", "elevation", "trace"]
categories = ["science::geo", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# cdylib  → WASM / C dynamic library (for wasm-pack)
# rlib    → normal Rust crate (keeps `cargo test` and lib usage working)
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]

[dependencies]
wasm-bindgen      = { version = "0.2",  optional = true }
serde             = { version = "1",    features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
serde_json = "1"
